--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -5,28 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="style.css">
-		<title>Allen UIL: Schedule</title>
+		<link rel="stylesheet" href="../style.css">
+		<title>Allen UIL: Comp Apps</title>
 	</head>
 	<body>
 		<header>
-			<h1>UIL Practice Schedule</h1>
+			<h1>Computer Applications</h1>
 			<nav>
-				<a href="index.html" class>Home</a>
-				<a href="subj.html" class>Subjects</a>
-				<a href="sched.html" class="active">Schedule</a>
-				<a href="https://warithr621.github.io/" class>Contact</a>
+				<a href="../subj.html" class>Back</a>
 			</nav>
 		</header>
 		<main>
 			<div class="container">
-				<h2>Some info</h2>
+				<h2>Info</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>some info</p>
-					</section>
-					<section class="col-md-4 col-xl-3">
-						
+						<p>Some words lol</p>
 					</section>
 				</div>
 			</div>
