--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css">
 		<title>Allen UIL: Home</title>
 	</head>
@@ -19,18 +20,26 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Some info</h2>
+				<h2>Why is this a thing?</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>some info</p>
+						<p>Hey y'all! I'm Warith, and I'm a part of Allen's class of 2024. At some point I sat down and realized 
+						that "wait a minute Allen had that one Google Site from a while ago, didn't it?" I decided to remake it 
+						because <b>A)</b> it was kind of out-of-date and <b>B)</b> I made this one so naturally it's better.
+						Anywho, feel free to look around and reach out to me if you have any feedback on the site. ¡Gracias!</p>
+						<br>
+						<p>Yes, the website design is bad. No, I don't care. Yes, I might fix it later.</p>
 					</section>
 					<section class="col-md-4 col-xl-3">
-						
+						<img src="images/cool_logo.png" alt="UIL Logo from some point" width="280" height="250">
+						<p style="text-align: center">Also, check out this cool logo we <i>almost</i> put on our non-existent 
+						UIL shirt from 2021-2022!</p>
 					</section>
 				</div>
 			</div>
 		</main>
 		<footer>
-			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank" style="color: #b3b3b3">Eric Zhang</a></p>
+			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
+			style="color: #b3b3b3">Eric Zhang</a></p>
 	</body>
 </html>
