--- a/subj.html
+++ b/subj.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css">
 		<title>Allen UIL: Subjects</title>
 	</head>
@@ -19,18 +20,66 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Some info</h2>
 				<div class="row">
-					<section class="col-md-8 col-xl-9">
-						<p>some info</p>
+				<h3>Click an image to learn more about a subject!</h3>
+					<section class="col-md-12"> <!--remember to use "row" divs when you're nesting columns! -->
+						<div class="row">
+							<section class="col-md-3">
+								<a href="desc/accounting.html"><img src="images/acct.png" width="240" height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/calculator.html"><img src="images/cal.png" width="240" height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/computer_applications.html"><img src="images/compapp.png" width="240"
+								height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/computer_science.html"><img src="images/cs.png" width="240"
+								height="240"></a>
+							</section>
+						</div>
 					</section>
-					<section class="col-md-4 col-xl-3">
-						
+					<section class="col-md-12"> <!--remember to use "row" divs when you're nesting columns! -->
+						<div class="row">
+							<section class="col-md-3">
+								<a href="desc/current_events.html"><img src="images/curvents.png" width="240"
+								height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/general_math.html"><img src="images/gm.png" width="240" height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/journalism.html"><img src="images/journ.png" width="240" height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/literary_criticism.html"><img src="images/litcrit.png" width="240"
+								height="240"></a>
+							</section>
+						</div>
+					</section>
+					<section class="col-md-12"> <!--remember to use "row" divs when you're nesting columns! -->
+						<div class="row">
+							<section class="col-md-3">
+								<a href="desc/number_sense.html"><img src="images/numsen.png" width="240" height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/science.html"><img src="images/sci.png" width="240" height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/social_studies.html"><img src="images/socstu.png" width="240"
+								height="240"></a>
+							</section>
+							<section class="col-md-3">
+								<a href="desc/spelling.html"><img src="images/spel.png" width="240" height="240"></a>
+							</section>
+						</div>
 					</section>
 				</div>
 			</div>
 		</main>
 		<footer>
-			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank" style="color: #b3b3b3">Eric Zhang</a></p>
+			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
+			style="color: #b3b3b3">Eric Zhang</a></p>
 	</body>
 </html>
