wow capitalization matters oof

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<p>Yes, the website design is bad. No, I don't care. Yes, I might fix it later.</p>
 					</section>
 					<section class="col-md-4 col-xl-3">
-						<img src="images/cool_logo.png" alt="UIL Logo from some point" width="280" height="250">
+						<img src="images/cool_logo.PNG" alt="UIL Logo from some point" width="280" height="250">
 						<p style="text-align: center">Also, check out this cool logo we <i>almost</i> put on our non-existent 
 						UIL shirt from 2021-2022!</p>
 					</section>
