--- a/desc/calculator.html
+++ b/desc/calculator.html
@@ -17,10 +17,37 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Ms. Gesh <font size="+1"><u>dawn.geshwender@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Okay you're probably staring at the title thinking "y'all got a competition called calculator??" Yes, 
+						yes we do. Calculator's a competition that basically tests both your typing speed and your problem solving 
+						skills. Half of the 70 questions are Number Crunchers, aka "type equation into calculator and write 
+						answer", while the other half constitutes of word problems or geometry problems to solve with the aid 
+						of a calculator.</p>
+						<ul>
+							<li>70 questions</li>
+							<li>30 minutes</li>
+							<li>35 Number Crunchers</li>
+							<li>21 Word Problems (Stated)</li>
+							<li>14 Geometry</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+5 for a right answer</li>
+								<li>-2 for a wrong answer</li>
+								<li>+3 for getting a question marked (SD) correct, but with the wrong # of sigfigs</li>
+								<li>-2 for skipping a question (not answering a question before the last attempted)</li>
+							</ul>
+							<li>All answers in scientific notation</li>
+							<li>Any calculator can be used, as long as...</li>
+							<ul>
+								<li>It's silent and doesn't require auxiliary power</li>
+								<li>There aren't any user modifications</li>
+								<li>At most two calculators can be used by the contestant at any point during the 
+								contest</li>
+								<li>The most common ones are the TI-84 Plus, TI-84 Plus CE, and the HP-35</li>
+							</ul>
+						</ul>
 					</section>
 				</div>
 			</div>
