--- a/desc/current_events.html
+++ b/desc/current_events.html
@@ -17,10 +17,26 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Point of Contact: Veda Kutagula <font size="+1"><u>veda.kutagula@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Current Events is a test that quizzes students on their knowledge of events from approximately the 
+						past 12 months. The multiple-choice test will ask students to identify aspects of recent news, such as 
+						the CEO of a company that may have gained popularity within the past months, and the essay portion will 
+						ask students to synthesize information given to them about a recent occurrence, such as the effects of 
+						COVID-19 on the modern-day economy.</p>
+						<ul>
+							<li>40 questions + essay</li>
+							<li>60 minutes combined</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+1 for a correct MCQ</li>
+								<li><b>No</b> deductions for getting a question wrong <i>or</i> not attempting it</li>
+								<li>Essay is graded on a scale from 0 to 10</li>
+							</ul>
+							<li>Note that although individual rankings will aggregate the MCQ and essay, team scores will only 
+							consider the non-essay portion</li>
+						</ul>
 					</section>
 				</div>
 			</div>
