--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -10,17 +10,63 @@
 	</head>
 	<body>
 		<header>
-			<h1>Journalism (...and a bit more!)</h1>
+			<h1>Journalism (and more!)</h1>
 			<nav>
 				<a href="../subj.html" class>Back</a>
 			</nav>
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Ms. Smith & Mr. MacVeigh <font size="+1"><u>elizabeth.smith@allenisd.org</u> and 
+				<u>matthew.macveigh@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Okay, I <i>might</i> have condensed a couple of competitions into one category, but a lot of these 
+						are kind of similar. UIL's journalistic side focuses on a lot of writing-related activities. Many of these 
+						include being given a series of resources and having to write a paper about them, whether that might be 
+						an editorial or a news flash. There's also a few other competitions. Ready Writing is a 2-hour long contest 
+						where one is given two quotes and has to write an essay based on one. Copy Editing is another, which is 
+						about properly editing a document for any grammatical errors and related things.</p>
+						<ul>
+							<li>Ready Writing:</li>
+							<ul>
+								<li>2 hours</li>
+								<li>Write a detailed essay regarding one of two quotes</li>
+							</ul>
+
+							<li>Copy Editing:</li>
+							<ul>
+								<li>15 minutes</li>
+								<li>Carefully proofread and edit writing to make a piece crystal clear</li>
+							</ul>
+
+							<li>Editorial Writing:</li>
+							<ul>
+								<li>45 minutes</li>
+								<li>Write a stylistic piece to defend a side in an argument</li>
+							</ul>
+
+							<li>Feature Writing:</li>
+							<ul>
+								<li>60 minutes</li>
+								<li>Write a piece that descriptively portrays an event</li>
+							</ul>
+
+							<li>News Writing:</li>
+							<ul>
+								<li>45 minutes</li>
+								<li>Write a piece that captures an event from a news flash, using a combination of 
+								quotes and higher-level lead writing</li>
+							</ul>
+
+							<li>Headline Writing:</li>
+							<ul>
+								<li>30 minutes</li>
+								<li>Write a bold headline to accurately describe a series of different reports</li>
+							</ul>
+
+							<li>All contests are graded by a panel of judges, with no relative point scoring system</li>
+						</ul>
 					</section>
 				</div>
 			</div>
