--- a/desc/literary_criticism.html
+++ b/desc/literary_criticism.html
@@ -17,10 +17,23 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Point of Contact: Blake Maulsby <font size="+1"><u>blake.maulsby@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Literary Criticism is about analyzing famous literary works and knowledge of literary terms & history. 
+						The contest has a section for literary terms+history, a section on questions from the annual UIL Reading 
+						List (Fiction, Poetry, Drama), a section on criticizing, and a tiebreaking essay.</p>
+						<ul>
+							<li>65 Questions + Essay</li>
+							<li>90 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+1 for a correct question in P1</li>
+								<li>+2 for a correct question in P2</li>
+								<li>+3 for a correct question in P3</li>
+								<li>The essay is graded on its own rubric</li>
+							</ul>
+						</ul>
 					</section>
 				</div>
 			</div>
