--- a/desc/number_sense.html
+++ b/desc/number_sense.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="../style.css">
-		<title>Allen UIL: Number Sense</title>
+		<title>Allen UIL: NS</title>
 	</head>
 	<body>
 		<header>
@@ -17,10 +17,26 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Ms. Gesh <font size="+1"><u>dawn.geshwender@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Gotta go fast gotta go fast gotta go fast gotta go fast...That's pretty much what this is. Number Sense 
+						is a test of quickly solving math problems, and even better you don't get to use a calculator or write 
+						down work!! All calculations have to be done manually, but of course with such a daunting contest there's a 
+						huge load of tricks to guide competitors along the way. Also when you see the number of questions below, 
+						don't panic. No one is expecting anyone to solve all 80 <s>except like Jakob but that's not the point</s>
+						.</p>
+						<ul>
+							<li>80 questions</li>
+							<li>10 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+5 for a right answer</li>
+								<li>-4 for a wrong answer</li>
+								<li>-4 for skipping a question (not answering a question before the last attempted)</li>
+							</ul>
+							<li>Only mental math allowed i.e. scratch work or calculators will get you DQed</li>
+						</ul>
 					</section>
 				</div>
 			</div>
