--- a/subj.html
+++ b/subj.html
@@ -15,7 +15,7 @@
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class="active">Subjects</a>
 				<a href="sched.html" class>Schedule</a>
-				<a href="https://warithr621.github.io/" class>Contact</a>
+				<a href="https://warithr621.github.io/" class>About Me</a>
 			</nav>
 		</header>
 		<main>
