--- a/desc/accounting.html
+++ b/desc/accounting.html
@@ -17,10 +17,23 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Not Sure <font size="+1">I should probably update this later</font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Although this uses a lot of math, accounting is actually very vocabulary focused. With a basic 
+						calculator at your aid, competitors answer a variety of questions related to concepts like payrolls 
+						and checkbook balancing.</p>
+						<ul>
+							<li>80 questions</li>
+							<li>60 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+5 for a right answer</li>
+								<li>An additional +1 for getting a question marked with an asterisk (*) right</li>
+								<li><b>No</b> deductions for getting a question wrong <i>or</i> not attempting it</li>
+							</ul>
+							<li>Competitors may use a four-function calculator</li>
+						</ul>
 					</section>
 				</div>
 			</div>
