--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -17,10 +17,28 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>You remember BIM class from like middle school? This is where that class and a bit of studying 
+						<i>might</i> be pretty clutch. With Microsoft Office ('13, '16, or '19 typically) at your side, 
+						constestants have to complete as many of a series of tasks as possible. This may include populating 
+						a spreadsheet with data to make a pie chart, importing the data into Access to file a report, and creating 
+						a memo to share your boss the pie chart you just created. Either way, this contest is admittingly divide 
+						and conquer: doing as much as you know ASAP and then worrying about the rest.</p>
+						<ul>
+							<li>A packet with Word, Excel, and Access instructions (not necessarily in that order)</li>
+							<li>38 minutes in sections</li>
+							<ul>
+								<li>5 minutes at the start for a typing tiebreaker</li>
+								<li>3 minutes once the packet is given to review it and make notes</li>
+								<li>30 minutes to actually do the test, with printing having to be completed within this 
+								time limit</li>
+							</ul>
+							<li>Scoring is done according to a rubric</li>
+							<li>Each competitor must have their own laptop to use, as well as a printer to print off their 
+							results</li>
+						</ul>
 					</section>
 				</div>
 			</div>
