--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -17,10 +17,40 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Eric Yang <font size="+1"><u>eric.yang@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Ooh, CS! UIL's Computer Science competition is actually split into two parts. The written test is a 
+						mostly-MCQ test that assesses a contestant's ability to analyze and predict a code's output, alongside 
+						testing other general techniques such as two's complement, digital expressions, and graph theory. Although 
+						changing since the competition's introduction, UIL has utilized Java as the official language since the 
+						2004 season.</p>
+						<p>The other part is actually a team competition: programming! Although one can compete in CS individually 
+						and advance to even state, the programming section must be a team of 3. These three people work together 
+						on a single laptop to solve a series of problems within the two-hour limit. Each problem has a set point 
+						value, which decreases for wrong submissions, and typically range from basic printing to the equivalent of 
+						some USACO Gold & Platinum topics. Like the written, programming only allows competitors to use Java.</p>
+						<h4>Written</h4>
+						<ul>
+							<li>40 questions</li>
+							<li>45 minutes</li>
+							<li>38 Multiple-Choice</li>
+							<li>2 Free-Resopnse</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+6 for a right answer</li>
+								<li>-2 for a wrong answer</li>
+								<li><b>No</b> deductions for not answering a question</li>
+							</ul>
+							<li>Ranges from basic printing to program and OOP analysis</li>
+						</ul>
+						<h4>Programming</h4>
+						<ul>
+							<li>12 questions</li>
+							<li>2 hours</li>
+							<li>Base total of 60 points per question, decreasing by 5 for each wrong submission</li>
+							<li>Deductions only affect your programming score if you eventually get the problem right</li>
+						</ul>
 					</section>
 				</div>
 			</div>
