--- a/desc/general_math.html
+++ b/desc/general_math.html
@@ -10,17 +10,34 @@
 	</head>
 	<body>
 		<header>
-			<h1>General Math(ematics)</h1>
+			<h1>General Math</h1>
 			<nav>
 				<a href="../subj.html" class>Back</a>
 			</nav>
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Ms. Gesh <font size="+1"><u>dawn.geshwender@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Math in general! If you've seen TMSCA middle school tests, think about it as those with like 20 times 
+						as many topics. The first few questions can be solved easily by anyone who has an understanding of basic 
+						Algebra I/II, but these questions can quickly advance to AP Calculus BC or AP Statistics information. The 
+						trick to these is to answer to the best of your knowledge, and play to your fore. Freshmen without 
+						precalculus have beaten seniors to UIL team spots, and sophomores without calculus or stats have topped 
+						regional rankings. This test has a wide variety of problems, and it's up to the competitors to strategize 
+						skillfully.</p>
+						<ul>
+							<li>60 questions</li>
+							<li>40 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+6 for a right answer</li>
+								<li>-2 for a wrong answer</li>
+								<li><b>No</b> deductions for not answering a question</b></li>
+							</ul>
+							<li>Ranging from Algebra I/II to BC Calculus and AP Statistics</li>
+						</ul>
 					</section>
 				</div>
 			</div>
