--- a/desc/science.html
+++ b/desc/science.html
@@ -17,10 +17,40 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Mrs. Lanier <font size="+1"><u>kathryn.lanier@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Science is a very vast field, so as you'd expect UIL Science covers a lot of things. 20 questions are 
+						biology, which cover a variety of concepts introduced in AP Biology as well as more "wildcard" questions 
+						that are less commonly known. The chemistry questions cover a lot of material typically from Advanced and 
+						AP Chemistry, and apply many of the ideas to solve problems from lattice structure to thermodynamic 
+						favorness. Physics covers practically everything from the AP Physics series (1, 2, C Mech, C E&M) and 
+						more; this section tests a combination of problems from an annually assigned reading, Mechanics and E&M
+						problems, and wrapping it up with linearization. As there's three different subjects covered, contestants 
+						can additionally advance from Districts to Regionals to State through an individual topic, placing 1st in 
+						the competition for one of the aforementioned subjects.</p>
+						<ul>
+							<li>60 questions</li>
+							<ul>
+								<li>20 Biology</li>
+								<li>20 Chemistry</li>
+								<li>20 Physics</li>
+							</ul>
+							<li>120 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+6 for a right answer</li>
+								<li>-2 for a wrong answer</li>
+								<li><b>No</b> deductions for not attempting a question</li>
+							</ul>
+							<li>Scientific calculators are allowed on this test:</li>
+							<ul>
+								<li>Casio fx-260 Solar II</li>
+								<li>Sharp EL-501X</li>
+								<li>TI-30Xa</li>
+								<li>TI-30 XIIS</li>
+							</ul>
+						</ul>
 					</section>
 				</div>
 			</div>
