--- a/desc/social_studies.html
+++ b/desc/social_studies.html
@@ -17,10 +17,22 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Mr. Hyatt <font size="+1"><u>keith.hyatt@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Social Studies consists of an MCQ test and essay, centered around a yearly upating theme & reading 
+						list (2022 has the Olympics and 2023 the Great Depression). The MCQ will typically cover questions related 
+						to the primary reading as well as general social studies term that may be recallable from APUSH, and 
+						the essay will typically relate to the annual theme.</p>
+						<ul>
+							<li>45 Questions + Essay</li>
+							<li>90 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>Between +1 and +3 depending on the part the question is in, for a right answer</li>
+								<li>The essay is graded from a scale of 0 to 20</li>
+							</ul>
+						</ul>
 					</section>
 				</div>
 			</div>
