--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -10,17 +10,33 @@
 	</head>
 	<body>
 		<header>
-			<h1>Spelling + Vocabulary</h1>
+			<h1>Spelling</h1>
 			<nav>
 				<a href="../subj.html" class>Back</a>
 			</nav>
 		</header>
 		<main>
 			<div class="container">
-				<h2>Info</h2>
+				<h2>Coach: Blake Maulsby <font size="+1"><u>blake.maulsby@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Some words lol</p>
+						<p>Spelling in UIL is not exactly your typical Spelling Bee anymore, so national winners don't have the 
+						upper hand anymore <s>cough nihar janga</s>. The first part of the spelling test has proofreading and 
+						vocab: identify misspelled words and fill in blanks with the proper choice. The other questions, as well 
+						as the tiebreaker, are like a written spelling bee: hear the word and its definition and spell it 
+						accordingly. UIL's Word Power changes every year, so make sure to find the latest one on the UIL site.</p>
+						<ul>
+							<li>100 questions + 20q tiebreaker</li>
+							<li>About 60 minutes</li>
+							<li>Scoring:</li>
+							<ul>
+								<li>+1 for a correct question</li>
+								<li><b>No</b> deduction for getting a question wrong</li>
+							</ul>
+							<li>Part 1 will be 15 minutes of 15 proofreading and 15 vocab questions</li>
+							<li>Part 2 will be 70 writing questions, and Part 3 will be 20 questions in similar format (note 
+							that neither of these have a set time, so it's really dependent on the meet itself</li>
+						</ul>
 					</section>
 				</div>
 			</div>
