2nd Commit of 08/14/2022
So anyways I decided to continue working
...and I finished the schedule page!!
So I think the website is good enough for presentation?? May have to proofread this and show someone to give advice (cough color scheme)
But I think we're ready to show this at the info meeting!!

--- a/sched.html
+++ b/sched.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>UIL Practice Schedule</h1>
+			<h1>UIL Schedule</h1>
 			<nav>
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class>Subjects</a>
@@ -20,13 +20,69 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Some info</h2>
+				<h2>Practice Schedule</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>some info</p>
-					</section>
-					<section class="col-md-4 col-xl-3">
-						
+						<table>
+							<tr>
+								<th>Wednesday</th>
+								<th>Thursday</th>
+								<th>Friday</th>
+							</tr>
+							<tr>
+								<td>Science<br>Lowery Lower E Pod</td>
+								<td>Computer Science<br>Lowery Lower E Pod<br>*Every Other Week</td>
+								<td>Math (NS, CAL, GM)<br>Lowery @ B110</td>
+							</tr>
+						</table>
+						<br><br>
+						<h2>Competition Schedule</h2>
+						<table>
+							<tr>
+								<td><b>VC#1</b></td>
+								<td>10/1 - 10/23</td>
+							</tr>
+							<tr>
+								<td><b>VC#2</b></td>
+								<td>11/14 - 12/10</td>
+							</tr>
+							<tr>
+								<td><b>VC#3</b></td>
+								<td>1/9 - 1/28</td>
+							</tr>
+							<tr>
+								<td><b>Invitational A</b></td>
+								<td>TBA</td>
+							</tr>
+							<tr>
+								<td><b>VC#4</b></td>
+								<td>2/13 - 3/4</td>
+							</tr>
+							<tr>
+								<td><b>Invitational B</b></td>
+								<td>TBA</td>
+							</tr>
+							<tr>
+								<td><b>UIL Districts</b></td>
+								<td>3/23 - 3/25</td>
+							</tr>
+							<tr>
+								<td><b>VC Regionals</b></td>
+								<td>4/3 - 4/18</td>
+							</tr>
+							<tr>
+								<td><b>UIL Regionals</b></td>
+								<td>4/21 - 4/22</td>
+							</tr>
+							<tr>
+								<td><b>VC State</b></td>
+								<td>4/25 - 5/2</td>
+							</tr>
+							<tr>
+								<td><b>UIL State</b></td>
+								<td>5/17 - 5/18 (??)</td>
+							</tr>
+						</table>
 					</section>
 				</div>
 			</div>
