3rd Commit of 08/14/2022: Color Theory Pt. 1
Yay my color theory is garbag, but Sanjana helped a lot with it :D
I think the website m i g h t actually be good to go now, but we'll see

--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
 		</main>
 		<footer>
 			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
-			style="color: #b3b3b3">Eric Zhang</a></p>
+			style="color: #000">Eric Zhang</a></p>
 	</body>
 </html>
