--- a/subj.html
+++ b/subj.html
@@ -18,7 +18,7 @@
 				<a href="https://warithr621.github.io/" class>About Me</a>
 			</nav>
 		</header>
-		<main>
+		<main style="background-color: #d14d38">
 			<div class="container">
 				<div class="row">
 				<h3>Click an image to learn more about a subject!</h3>
@@ -80,6 +80,6 @@
 		</main>
 		<footer>
 			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
-			style="color: #b3b3b3">Eric Zhang</a></p>
+			style="color: #000">Eric Zhang</a></p>
 	</body>
 </html>
