--- a/desc/calculator.html
+++ b/desc/calculator.html
@@ -20,11 +20,10 @@
 				<h2>Coach: Ms. Gesh <font size="+1"><u>dawn.geshwender@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Okay you're probably staring at the title thinking "y'all got a competition called calculator??" Yes, 
-						yes we do. Calculator's a competition that basically tests both your typing speed and your problem solving 
-						skills. Half of the 70 questions are Number Crunchers, aka "type equation into calculator and write 
-						answer", while the other half constitutes of word problems or geometry problems to solve with the aid 
-						of a calculator.</p>
+						<p>As the name might suggest, this competition revolves a lot around calculators. Calculator's a 
+						competition that basically tests both your typing speed and your problem solving skills. Half of the 70 
+						questions are Number Crunchers, aka "type equation into calculator and write answer", while the other half 
+						constitutes of word problems or geometry problems to solve with the aid of a calculator.</p>
 						<ul>
 							<li>70 questions</li>
 							<li>30 minutes</li>
