--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -20,12 +20,12 @@
 				<h2>Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>You remember BIM class from like middle school? This is where that class and a bit of studying 
-						<i>might</i> be pretty clutch. With Microsoft Office ('13, '16, or '19 typically) at your side, 
-						constestants have to complete as many of a series of tasks as possible. This may include populating 
-						a spreadsheet with data to make a pie chart, importing the data into Access to file a report, and creating 
-						a memo to share your boss the pie chart you just created. Either way, this contest is admittingly divide 
-						and conquer: doing as much as you know ASAP and then worrying about the rest.</p>
+						<p>You remember BIM class from middle school? That class alongside some studying might make you a great 
+						fit for this competition. With Microsoft Office ('13, '16, or '19 typically) at your side, constestants 
+						have to complete as many of a series of tasks as possible. This may include populating  spreadsheet with 
+						data to make a pie chart, importing the data into Access to file a report, and creating a memo to share 
+						your boss the pie chart you just created. Either way, this contest is admittingly divide and conquer: 
+						doing as much as you know ASAP and then worrying about the rest.</p>
 						<ul>
 							<li>A packet with Word, Excel, and Access instructions (not necessarily in that order)</li>
 							<li>38 minutes in sections</li>
