--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -21,12 +21,12 @@
 				<u>matthew.macveigh@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Okay, I <i>might</i> have condensed a couple of competitions into one category, but a lot of these 
-						are kind of similar. UIL's journalistic side focuses on a lot of writing-related activities. Many of these 
-						include being given a series of resources and having to write a paper about them, whether that might be 
-						an editorial or a news flash. There's also a few other competitions. Ready Writing is a 2-hour long contest 
-						where one is given two quotes and has to write an essay based on one. Copy Editing is another, which is 
-						about properly editing a document for any grammatical errors and related things.</p>
+						<p>This page actually has a couple of contests together, but they're pretty similar in competition style 
+						and idea. Many of these include being given a series of resources and having to write a paper about them, 
+						whether that might be an editorial or a news flash. There's also a few other competitions. Ready Writing 
+						is a 2-hour long contest where one is given two quotes and has to write an essay based on one. Copy 
+						Editing is another, which is about properly editing a document for any grammatical errors and related 
+						things.</p>
 						<ul>
 							<li>Ready Writing:</li>
 							<ul>
