--- a/desc/number_sense.html
+++ b/desc/number_sense.html
@@ -20,12 +20,11 @@
 				<h2>Coach: Ms. Gesh <font size="+1"><u>dawn.geshwender@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Gotta go fast gotta go fast gotta go fast gotta go fast...That's pretty much what this is. Number Sense 
-						is a test of quickly solving math problems, and even better you don't get to use a calculator or write 
-						down work!! All calculations have to be done manually, but of course with such a daunting contest there's a 
-						huge load of tricks to guide competitors along the way. Also when you see the number of questions below, 
-						don't panic. No one is expecting anyone to solve all 80 <s>except like Jakob but that's not the point</s>
-						.</p>
+						<p>This competition is quite literally the definition of speed. Number Sense is a test of quickly solving 
+						math problems, and even better you don't get to use a calculator or write down work!! All calculations 
+						have to be done manually, but of course with such a daunting contest there's a huge load of tricks to 
+						guide competitors along the way. Although doing 80 questions in 10 minutes seems very daunting, very little 
+						people finish all the questions within the time limit, and many still place high without it.</p>
 						<ul>
 							<li>80 questions</li>
 							<li>10 minutes</li>
