--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -20,11 +20,11 @@
 				<h2>Coach: Blake Maulsby <font size="+1"><u>blake.maulsby@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Spelling in UIL is not exactly your typical Spelling Bee anymore, so national winners don't have the 
-						upper hand anymore <s>cough nihar janga</s>. The first part of the spelling test has proofreading and 
-						vocab: identify misspelled words and fill in blanks with the proper choice. The other questions, as well 
-						as the tiebreaker, are like a written spelling bee: hear the word and its definition and spell it 
-						accordingly. UIL's Word Power changes every year, so make sure to find the latest one on the UIL site.</p>
+						<p>Spelling in UIL is not exactly your typical Spelling Bee anymore, rather having several twists. The 
+						first part of the spelling test has proofreading and vocab: identify misspelled words and fill in blanks 
+						with the proper choice. The other questions, as well as the tiebreaker, are like a written spelling bee: 
+						hear the word and its definition and spell it accordingly. UIL's Word Power changes every year, so make 
+						sure to find the latest one on the UIL site.</p>
 						<ul>
 							<li>100 questions + 20q tiebreaker</li>
 							<li>About 60 minutes</li>
