--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 				<a href="index.html" class="active">Home</a>
 				<a href="subj.html" class>Subjects</a>
 				<a href="sched.html" class>Schedule</a>
-				<a href="https://warithr621.github.io/" class>About Me</a>
 			</nav>
 		</header>
 		<main>
 			<div class="container">
-				<h2>Why does this site exist?</h2>
+				<h2>What is this site?</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
-						<p>Hey y'all! I'm Warith, and I'm a part of Allen's class of 2024. At some point I sat down and realized 
-						that "wait a minute Allen had that one Google Site from a while ago, didn't it?" I decided to remake it 
-						because <b>A)</b> it was kind of out-of-date and <b>B)</b> I made this one so naturally it's better.
-						Anywho, feel free to look around and reach out to me if you have any feedback on the site. ¡Gracias!</p>
+						<p>Hey y'all! I'm Warith, and I'm a part of Allen's class of 2024. I wanted to make this site as an 
+						alternative resource for all things Allen UIL. This should include descriptions of the many competitions 
+						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot, and if you have any 
+						questions or suggestions feel free to reach out (you can find my contact <a style="color: #000" 
+						href="https://warithr621.github.io/media.html"><u>here</u></a>).</p>
 						<br>
-						<h2>Wait, what's Academic UIL?</h2>
+						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
 						the acronym "UIL" in 1913. It features three primary areas: athletics, arts, and academics. The academic 
 						side of this focuses on a variety of competitions for students to show off their expertise, whether that 
@@ -37,13 +37,14 @@
 						2022 State competition (trophy on right), including having 2 state champions and having the best 6A
 						spelling team for two years running!</p>
 						<br>
-						<h2>Sounds cool, how do I join?</h2>
+						<h2>How do I join?</h2>
 						<p>If school just started at the time you're reading this, the UIL info meeting would probably be in late 
 						August or early September, most likely at Lowery. If the meeting had already happened, you could try either 
-						asking someone who you know is in UIL, or try emailing Ms. Gesh at <a href="dawn.geshwender@allenisd.org">
-						dawn.geshwender@allenisd.org</a> for more info on how to join.</p>
+						asking someone who you know is in UIL, or try emailing Ms. Gesh at <a 
+						href="dawn.geshwender@allenisd.org" style="color: #000"> dawn.geshwender@allenisd.org</a> for more info on 
+						how to join.</p>
 						<br>
-						<h2>Sweet! But wait, when are competitions?</h2>
+						<h2>When are competitions?</h2>
 						<p>The fall semester is primarily practices, which occur on a weekly basis at either Allen High School 
 						or the Lowery Freshman Center. From January through March we start going to practice competitions called 
 						<u>UIL Invitationals</u> that occur throughout the DFW complex. Late March introduces the <u>UIL District 
@@ -52,7 +53,7 @@
 						North Texas and around DFW, and the best of the best get to travel to UT Austin for the <u>State</u> 
 						competition in early May.</p>
 						<br>
-						<h2>"Our best"? How are those decided?</h2>
+						<h2>How are teams for District (and beyond) decided?</h2>
 						<p>As I mentioned, we have both practice meetings and interschool competitions throughout the year. As 
 						these progress, our coaches work together to pick the best of the best from all our competitors. With 
 						some exceptions, each team sent to Districts will typically have 4 people (Computer Apps has 3 and Science 
@@ -63,18 +64,18 @@
 						If you're wondering, it is possible to get into multiple teams (the guy who made this website is literally 
 						in 6 of them for example).</p>
 						<br>
-						<h2>Wait what if I want to participate but I don't think I'm that good...?</h2>
+						<h2>Can I still participate even if I don't think I'm good enough?</h2>
 						<p>Whether you think you're good or not, I think you should still try to give this a shot to see how it 
 						goes. Everyone, both the best and the worst, all start from a basic block and grow from learning. Even if 
 						you're entirely new at a competition, you may later realize that it's pretty interesting and that you even 
 						excel at it. Regardless, both the meetings and the competitions are a great way to learn something new, 
 						show off your newfound knowledge, and spend a ncie Saturday with some friends. Everyone always has room 
-						for improvement, and that all starts just by taking the first step to try something <s>and also listen 
-						to <a href="https://www.youtube.com/watch?v=qoq8B8ThgEM">Tujh</a></s>.</p>
+						for improvement, and that all starts just by taking the first step to try something.</p>
 						<br>
 					</section>
 					<section class="col-md-4 col-xl-3">
-						<img src="images/trophy_2022.png" alt="2nd Sweepstakes Trophy" width="300" height="250">
+						<a href="https://www.youtube.com/watch?v=qoq8B8ThgEM"><img src="images/trophy_2022.png" 
+						alt="2nd Sweepstakes Trophy" width="300" height="250"></a>
 					</section>
 				</div>
 			</div>
