--- a/sched.html
+++ b/sched.html
@@ -15,7 +15,6 @@
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class>Subjects</a>
 				<a href="sched.html" class="active">Schedule</a>
-				<a href="https://warithr621.github.io/" class>About Me</a>
 			</nav>
 		</header>
 		<main>
@@ -80,7 +79,7 @@
 							</tr>
 							<tr>
 								<td><b>UIL State</b></td>
-								<td>5/17 - 5/18 (??)</td>
+								<td>5/17 - 5/18 (Tentative)</td>
 							</tr>
 						</table>
 					</section>
