--- a/subj.html
+++ b/subj.html
@@ -15,13 +15,12 @@
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class="active">Subjects</a>
 				<a href="sched.html" class>Schedule</a>
-				<a href="https://warithr621.github.io/" class>About Me</a>
 			</nav>
 		</header>
-		<main style="background-color: #d14d38">
+		<main style="background-color: #961b12">
 			<div class="container">
 				<div class="row">
-				<h3>Click an image to learn more about a subject!</h3>
+				<h3 style="color:#fff">Click an image to learn more about a subject!</h3>
 					<section class="col-md-12"> <!--remember to use "row" divs when you're nesting columns! -->
 						<div class="row">
 							<section class="col-md-3">
