--- a/desc/social_studies.html
+++ b/desc/social_studies.html
@@ -38,7 +38,7 @@
 			</div>
 		</main>
 		<footer>
-			<p class="footnote"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
-			style="color: #000">Eric Zhang</a></p>
+			<p class="footnote" style="color:#fff"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
+			>Eric Zhang</a></p>
 	</body>
 </html>
