--- a/subj.html
+++ b/subj.html
@@ -15,6 +15,7 @@
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class="active">Subjects</a>
 				<a href="sched.html" class>Schedule</a>
+				<a href="https://allen-uil.github.io/blog/" class>Blog</a>
 			</nav>
 		</header>
 		<main style="background-color: #961b12">
