--- a/sched.html
+++ b/sched.html
@@ -15,6 +15,7 @@
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class>Subjects</a>
 				<a href="sched.html" class="active">Schedule</a>
+				<a href="https://allen-uil.github.io/blog/" class>Blog</a>
 			</nav>
 		</header>
 		<main>
