--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Allen ISD Academic UIL</h1>
+			<h1>Allen Academic UIL</h1>
 			<nav>
 				<a href="index.html" class="active">Home</a>
 				<a href="subj.html" class>Subjects</a>
@@ -82,7 +82,9 @@
 			</div>
 		</main>
 		<footer>
-			<p class="footnote" style="color:#fff"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
-			>Eric Zhang</a></p>
+			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
+			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
+			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
+		</footer>
 	</body>
 </html>
