--- a/desc/number_sense.html
+++ b/desc/number_sense.html
@@ -41,7 +41,9 @@
 			</div>
 		</main>
 		<footer>
-			<p class="footnote" style="color:#fff"> Made by Warith Rahman via GitHub. Design inspired by <a href="https://www.ekzhang.com" target="_blank"
-			>Eric Zhang</a></p>
+			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
+			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
+			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
+		</footer>
 	</body>
 </html>
